<resources>
    <string name="app_name">MVVMDemo</string>

    <string name="txt_username">Username</string>
    <string name="txt_hint_username">Please enter your username</string>

    <string name="txt_password">Password</string>
    <string name="txt_hint_password">Please enter your password</string>

    <string name="txt_default_error_msg">Error Message</string>

    <string name="txt_login_command">Login</string>
</resources>
